--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -14,3 +14,11 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+.button {
+  color: white;
+  padding-top: 14px;
+  padding-bottom: 11px;
+  background-color: #68b738;
+  text-transform: uppercase;
+}
