--- a/source/sass/page.scss
+++ b/source/sass/page.scss
@@ -1,10 +1,4 @@
 .page {
-  min-width: 320px;
-  max-width: 1440px; /* надо или нет? */
+  width: 320px;
   margin: 0 auto;
-  height: 100%;
-  font-family: "Oswald", "Arial", sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-  background-color: white;
 }
