--- a/source/sass/property-list.scss
+++ b/source/sass/property-list.scss
@@ -1,12 +1,11 @@
 .property-list {
-  list-style: none;
-  padding: 0;
+  @include clearlist
 }
 
 .property-list__logo {
   width: 60px;
   height: 60px;
-  background-color: #68b738;
+  background-color: $green;
   background-repeat: no-repeat;
   background-position: center;
   &--leaf {
