--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -6,6 +6,13 @@ html {
   box-sizing: inherit;
 }
 
+body {
+  font-family: "Oswald", "Arial", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  background-color: $base;
+}
+
 a {
   text-decoration: none;
 }
@@ -13,12 +20,4 @@ a {
 img {
   max-width: 100%;
   height: auto;
-}
-
-.button {
-  color: white;
-  padding-top: 14px;
-  padding-bottom: 11px;
-  background-color: #68b738;
-  text-transform: uppercase;
 }
