--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,28 +3,28 @@
 @import "var.scss";
 @import "global.scss";
 @import "mixin.scss";
-@import "page.scss";
-@import "about-list.scss";
-@import "add-list.scss";
-@import "button.scss";
-@import "contacts.scss";
-@import "contacts-list.scss";
-@import "example.scss";
-@import "form.scss";
-@import "how-work.scss";
-@import "index-list.scss";
-@import "main-nav.scss";
-@import "more-goods.scss";
-@import "order-all.scss";
-@import "page-footer.scss";
-@import "page-header.scss";
-@import "page-main.scss";
-@import "production.scss";
-@import "programs.scss";
-@import "property-list.scss";
-@import "social-list.scss";
-@import "status-bar.scss";
-@import "target-list.scss";
-@import "title.scss";
-@import "training.scss";
-@import "visually-hidden.scss";
+@import "blocks/page.scss";
+@import "blocks/about-list.scss";
+@import "blocks/add-list.scss";
+@import "blocks/button.scss";
+@import "blocks/contacts.scss";
+@import "blocks/contacts-list.scss";
+@import "blocks/example.scss";
+@import "blocks/form.scss";
+@import "blocks/how-work.scss";
+@import "blocks/index-list.scss";
+@import "blocks/main-nav.scss";
+@import "blocks/more-goods.scss";
+@import "blocks/order-all.scss";
+@import "blocks/page-footer.scss";
+@import "blocks/page-header.scss";
+@import "blocks/page-main.scss";
+@import "blocks/production.scss";
+@import "blocks/programs.scss";
+@import "blocks/property-list.scss";
+@import "blocks/social-list.scss";
+@import "blocks/status-bar.scss";
+@import "blocks/target-list.scss";
+@import "blocks/title.scss";
+@import "blocks/training.scss";
+@import "blocks/visually-hidden.scss";
