--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -6,6 +6,7 @@
   background-color: $green;
   text-transform: uppercase;
   text-align: center;
+  border: 0;
   &--grey {
     background-color: $grey;
     color: $grey-text;
