--- a/source/sass/blocks/order-all.scss
+++ b/source/sass/blocks/order-all.scss
@@ -15,3 +15,10 @@
   padding-left: 70px;
   padding-right: 70px;
 }
+
+@media (min-width: 768px) and (max-width: 1300px) {
+  .order-all {
+    background-image: url(../img/icon-gift.svg),
+    url(../img/gift-photo-tablet@1x.jpg);
+  }
+}
