--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -5,3 +5,9 @@
   padding-right: 20px;
   border: 1px solid tomato;
 }
+
+@media (min-width: 768px) and (max-width: 1300px) {
+  .page {
+    width: 768px;
+  }
+}
