--- a/source/sass/blocks/title.scss
+++ b/source/sass/blocks/title.scss
@@ -5,3 +5,14 @@
   font-weight: 400;
   color: $black-title;
 }
+
+@media (min-width: 768px) and (max-width: 1300px) {
+  .title {
+    font-size: 60px;
+    line-height: 60px;
+    &--hr {
+      font-size: 36px;
+      line-height: 36px;
+    }
+  }
+}
