--- a/source/sass/blocks/training.scss
+++ b/source/sass/blocks/training.scss
@@ -6,6 +6,14 @@
   padding-bottom: 20px;
 }
 
+.training__title {
+  margin: 0;
+  font-size: 24px;
+  line-height: 24px;
+  font-weight: 400;
+  color: $black-title;
+}
+
 .training__logo {
   width: 50px;
   height: 50px;
@@ -13,12 +21,6 @@
   background-color: $green;
   background-repeat: no-repeat;
   background-position: center;
-  &--slim {
-    background-image: url(../img/icon-cat-slim.svg);
-  }
-  &--pro {
-    background-image: url(../img/icon-cat-pro.svg);
-  }
 }
 
 .training__description {
@@ -35,3 +37,25 @@
   font-size: 16px;
   text-transform: uppercase;
 }
+
+@media (min-width: 768px) and (max-width: 1300px) {
+  .training__text {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .training__logo {
+    width: 200px;
+    min-width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    background-color: $green;
+  }
+
+  .training__title {
+    font-size: 36px;
+    line-height: 37px;
+  }
+}
+
+
