--- a/source/sass/blocks/title.scss
+++ b/source/sass/blocks/title.scss
@@ -6,7 +6,7 @@
   color: $black-title;
 }
 
-@media (min-width: 768px) and (max-width: 1300px) {
+@media (min-width: 768px) {
   .title {
     font-size: 60px;
     line-height: 60px;
