--- a/source/sass/blocks/how-work.scss
+++ b/source/sass/blocks/how-work.scss
@@ -1,6 +1,12 @@
-@media (min-width: 768px) and (max-width: 1300px) {
+@media (min-width: 768px) {
   .how-work__list {
     display: flex;
     flex-wrap: wrap;
+  }
+}
+
+@media (min-width: 1300px) {
+  .how-work__list {
+    flex-wrap: nowrap;
   }
 }
