--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -17,7 +17,7 @@
   }
 }
 
-@media (min-width: 768px) and (max-width: 1300px) {
+@media (min-width: 768px) {
   .main-nav__list {
     display: flex;
   }
@@ -32,6 +32,17 @@
       font-size: 18px;
       font-weight: 400;
     }
+  }
+}
 
+@media (min-width: 1300px) {
+  .main-nav__item {
+    &--active {
+      border-bottom: 2px solid $base;
+    }
+    a {
+      color: /*$base*/ black;
+      font-size: 20px;
+    }
   }
 }
