--- a/source/sass/blocks/more-goods.scss
+++ b/source/sass/blocks/more-goods.scss
@@ -18,7 +18,7 @@
   font-size: 16px;
 }
 
-@media (min-width: 768px) and (max-width: 1300px) {
+@media (min-width: 768px) {
   .more-goods__wrapper {
     display: flex;
     justify-content: space-between;
@@ -28,5 +28,11 @@
   .more-goods__value {
     text-align: right;
     margin-left: auto;
+  }
+}
+
+@media (min-width: 1300px) {
+  .more-goods__item {
+    display: flex;
   }
 }
