--- a/source/sass/blocks/order-all.scss
+++ b/source/sass/blocks/order-all.scss
@@ -1,5 +1,4 @@
 .order-all {
-  height: 290px;
   background-color: #64a83b;
   background-image: url(../img/icon-gift.svg),
     url(../img/gift-photo-mobile@1x.jpg);
@@ -14,11 +13,33 @@
   text-align: center;
   padding-left: 70px;
   padding-right: 70px;
+  margin: 0;
 }
 
-@media (min-width: 768px) and (max-width: 1300px) {
+@media (min-width: 768px) {
   .order-all {
     background-image: url(../img/icon-gift.svg),
-    url(../img/gift-photo-tablet@1x.jpg);
+      url(../img/gift-photo-tablet@1x.jpg);
+    background-size: 55px 60px, 708px 200px;
+  }
+
+  .order-all__banner {
+    p {
+      padding: 75px 125px 69px 424px;
+      text-align: left;
+    }
+  }
+}
+
+@media (min-width: 1300px) {
+  .order-all {
+    background-image: url(../img/icon-gift.svg),
+      url(../img/gift-photo-desktop@1x.jpg);
+    background-size: 55px 60px, 245px 289px;
+  }
+  .order-all__banner {
+    p {
+      padding: 190px 43px 43px 43px;
+    }
   }
 }
