--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -17,7 +17,7 @@
   padding-left: 20px;
 }
 
-@media (min-width: 768px) and (max-width: 1300px) {
+@media (min-width: 768px) {
   .page-header {
     display: flex;
     justify-content: space-between;
