--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -6,3 +6,9 @@
   font-family: arial;
   color: $grey-text;
 }
+
+.example__spending {
+  margin: 0;
+  padding: 0;
+  text-transform: uppercase;
+}
