--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,6 +1,6 @@
 .main-nav {
-  &--none {
-    /*display:none;*/
+  &--closed {
+    display:none;
   }
 }
 
@@ -10,10 +10,17 @@
 
 .main-nav__item {
   text-align: center;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  border-bottom: 1px solid #e6e6e6;
+  &:first-child {
+    border-top: 1px solid #e6e6e6;
+  }
   a {
     color: $black-title;
     font-size: 20px;
     font-weight: 500;
+    text-transform: uppercase;
   }
 }
 
