--- a/source/sass/blocks/how-work.scss
+++ b/source/sass/blocks/how-work.scss
@@ -1,7 +1,22 @@
+.how-work__wrap {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 @media (min-width: 768px) {
+  .how-work__wrap {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
   .how-work__list {
     display: flex;
     flex-wrap: wrap;
+  }
+
+  .how-work__title {
+    margin-top: 51px;
+    margin-bottom: 63px;
   }
 }
 
