--- a/source/sass/blocks/index-list.scss
+++ b/source/sass/blocks/index-list.scss
@@ -1,5 +1,6 @@
 .index-list {
   @include clearlist;
+  display: flex;
 }
 
 .index-list__value {
@@ -11,4 +12,9 @@
   font-family: arial;
   font-size: 12px;
   color: $grey-text;
+}
+
+.index-list__item {
+  display: flex;
+  flex-direction: column;
 }
