--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -58,7 +58,6 @@
   padding-top: 11px;
   padding-right: 20px;
   padding-bottom: 15px;
-  padding-left: 20px;
 }
 
 @media (min-width: 768px) {
@@ -68,7 +67,24 @@
     align-items: center;
   }
 
+  .page-header__logo-image {
+    width: 173px;
+    height: 58px;
+  }
+
+  .page-header__wrap {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
   .page-header__toggle {
     display: none;
+  }
+}
+
+@media (min-width: 1300px) {
+  .page-header__wrap {
+    padding-left: 40px;
+    padding-right: 40px;
   }
 }
