--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -1,3 +1,8 @@
+.programs__wrap {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 .programs__item {
   margin-bottom: 20px;
 }
@@ -7,9 +12,19 @@
     display: flex;
     flex-direction: column;
   }
+
+  .programs__wrap {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
   .programs__item {
     display: flex;
     flex-direction: row-reverse;
+    margin-bottom: 30px;
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 }
 
