--- a/source/sass/blocks/property-list.scss
+++ b/source/sass/blocks/property-list.scss
@@ -39,10 +39,14 @@
   .property-list__logo {
     width: 100px;
     height: 100px;
+    margin-bottom: 37px;
   }
 
-  .property-list__dexcription {
+  .property-list__description {
     font-size: 16px;
+    line-height: 24px;
+    margin-right: 100px;
+    margin-bottom: 137px;
   }
 }
 
