--- a/source/sass/blocks/status-bar.scss
+++ b/source/sass/blocks/status-bar.scss
@@ -1,3 +1,10 @@
+.status-bar {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 35px;
+  padding-bottom: 38px;
+}
+
 .status-bar__condition {
   margin: 0;
   padding: 0;
@@ -7,4 +14,10 @@
   text-transform: uppercase;
   border: 0;
   background: 0;
+}
+
+@media (min-width: 768px) {
+  .status-bar__condition {
+    border-bottom: 1px dotted #eaeaea;
+  }
 }
