--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,8 +1,18 @@
 .page-footer {
   background-color: $grey;
+  .page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .page-footer__copyright {
+  width: 280px;
+  height: 78px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   font-family: arial;
   font-size: 16px;
   color: #444444;
@@ -10,19 +20,60 @@
     width: 27px;
     height: 34px;
   }
+  span {
+    margin-right: 23px;
+  }
+}  /*не поулчилось увеичить размер patch до размера svg*/
+
+.page-footer__logo {
+  padding-top: 39px;
+  padding-bottom: 31px;
+  border-bottom: 1px solid #d9d9d9;
+  width: 280px;
+  text-align: center;
+}
+
+.page-footer__wrapper {
+  height: 62px;
+  width: 280px;
+  border-bottom: 1px solid #d9d9d9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @media (min-width: 768px) {
   .page-footer {
     .page {
       display: flex;
+      flex-direction: row;
       justify-content: space-between;
       align-items: center;
+      padding-left: 30px;
+      padding-right: 30px;
     }
   }
 
+  .page-footer__logo {
+    width: auto;
+  }
+
+  .page-footer__wrapper {
+    width: auto;
+    border: 0;
+  }
+
   .page-footer__copyright {
-    display: flex;
-    align-items: center;
+    width: auto;
+    justify-content: center;
+  }
+}
+
+@media (min-width: 1300px) {
+  .page-footer {
+    .page {
+      padding-left: 40px;
+      padding-right: 40px;
+    }
   }
 }
