--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -32,7 +32,7 @@
 
     position: absolute;
     top: 32px;
-    right: 22px;
+    right: 20px;
 
     width: 24px;
     height: 2px;
@@ -56,8 +56,9 @@
   justify-content: space-between;
   align-items: center;
   padding-top: 11px;
-  padding-right: 20px;
   padding-bottom: 15px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 @media (min-width: 768px) {
@@ -67,13 +68,7 @@
     align-items: center;
   }
 
-  .page-header__logo-image {
-    width: 173px;
-    height: 58px;
-  }
-
-  .page-header__wrap {
-    padding-left: 30px;
+  .page-header__nav {
     padding-right: 30px;
   }
 
@@ -83,8 +78,7 @@
 }
 
 @media (min-width: 1300px) {
-  .page-header__wrap {
-    padding-left: 40px;
+  .page-header__nav {
     padding-right: 40px;
   }
 }
