--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -6,8 +6,6 @@
   background-repeat: no-repeat;
   background-size: 320px 305px;
   text-align: center;
-
-  border: 2px solid navy;
 }
 
 .page-main__banner-green {
@@ -31,6 +29,14 @@
     color: $base;
     line-height: 36px;
   }
+  &--catalog {
+    padding: 0;
+    margin-top: 31px;
+    padding-bottom: 35px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-bottom: 1px solid #ededed;
+  }
 }
 
 .page-main__text {
@@ -49,6 +55,7 @@
   margin-right: 20px;
   margin-bottom: 20px;
 }
+
 
 @media (min-width: 768px) {
   .page-main__banner {
@@ -114,6 +121,10 @@
   }
 
   .page-main__text {
+    margin-left: 120px;
+  }
+
+  .page-main__choice {
     margin-left: 120px;
   }
 }
