--- a/source/sass/blocks/production.scss
+++ b/source/sass/blocks/production.scss
@@ -7,10 +7,16 @@
   font-size: 16px;
   font-weight: 400;
   text-transform: uppercase;
+  text-align: left;
+  margin-right: 60px;
 }
 
 .production__item {
   text-align: center;
+  border-bottom: 1px solid #ededed;
+  padding-bottom: 25px;
+  padding-left: 20px;
+  padding-right: 20px;
   p {
     font-family: arial;
     font-size: 12px;
@@ -20,6 +26,35 @@
 
 .production__order {
   font-size: 16px;
+}
+
+.production__card {
+  display: flex;
+}
+
+.production__logo {
+  width: 50%;
+}
+
+.production__text {
+  width: 50%;
+}
+
+.production__table {
+  width: 100%;
+  font-family: arial;
+  font-size: 12px;
+  color: $grey-text;
+  padding-bottom: 23px;
+}
+
+.production__table {
+  td {
+    text-align: left;
+    &:last-child {
+      text-align: right;
+    }
+  }
 }
 
 @media (min-width: 768px) {
