все еще сетки без красных блоков

--- a/source/sass/blocks/order-all.scss
+++ b/source/sass/blocks/order-all.scss
@@ -18,6 +18,8 @@
 
 @media (min-width: 768px) {
   .order-all {
+    width: 708px;
+    margin-top: 69px;
     background-image: url(../img/icon-gift.svg),
       url(../img/gift-photo-tablet@1x.jpg);
     background-size: 55px 60px, 708px 200px;
