--- a/source/sass/blocks/how-work.scss
+++ b/source/sass/blocks/how-work.scss
@@ -1,10 +1,10 @@
-.how-work__wrap {
+.how-work {
   padding-left: 20px;
   padding-right: 20px;
 }
 
 @media (min-width: 768px) {
-  .how-work__wrap {
+  .how-work {
     padding-left: 30px;
     padding-right: 30px;
   }
@@ -21,6 +21,11 @@
 }
 
 @media (min-width: 1300px) {
+  .how-work {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
   .how-work__list {
     flex-wrap: nowrap;
   }
