--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -78,6 +78,10 @@
     font-size: 60px;
     line-height: 60px;
     text-align: left;
+    &--catalog {
+      margin-bottom: 156px;
+      border: 0;
+    }
   }
 
   .page-main__choice {
@@ -118,6 +122,10 @@
   .page-main__title {
     margin-left: 120px;
     margin-right: 760px;
+    &--catalog {
+      margin-right: 0;
+    }
+
   }
 
   .page-main__text {
