--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -1,4 +1,4 @@
-.programs__wrap {
+.programs {
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -11,9 +11,6 @@
   .programs {
     display: flex;
     flex-direction: column;
-  }
-
-  .programs__wrap {
     padding-left: 30px;
     padding-right: 30px;
   }
@@ -35,6 +32,7 @@
   }
 
   .programs__item {
+    position: relative;
     display: block;
   }
 }
