--- a/source/sass/blocks/training.scss
+++ b/source/sass/blocks/training.scss
@@ -42,12 +42,10 @@
 
 @media (min-width: 768px) {
   .training {
-    padding-left: 55px;
-  }
-
-  .training__text {
-    display: flex;
-    flex-direction: column;
+    padding-top: 81px;
+    padding-right: 56px;
+    padding-bottom: 62px;
+    padding-left: 52px;
   }
 
   .training__logo {
@@ -65,16 +63,16 @@
   .training__title {
     font-size: 36px;
     line-height: 37px;
-    margin-top: 81px;
     margin-bottom: 26px;
   }
 
   .training__link {
-    margin-bottom: 62px;
+    margin-bottom: 42px;
   }
 
   .training__description {
     border: 0;
+    padding: 0;
     margin-bottom: 61px;
     margin-right: 270px;
     font-size: 16px;
@@ -88,11 +86,32 @@
 @media (min-width: 1300px) {
   .training {
     width: 570px;
+    margin-bottom: 0;
+    padding-top: 81px;
+    padding-right: 56px;
+    padding-bottom: 62px;
+    padding-left: 52px;
+  }
+
+  .training__title {
+    margin-left: 164px;
+    margin-bottom: 75px;
   }
 
   .training__logo {
+    left: 52px;
+    top: 47px;
+    transform: translate(0);
     width: 100px;
     min-width: 100px;
     height: 100px;
+  }
+
+  .training__link {
+    margin-bottom: 0;
+  }
+
+  .training__description {
+    margin: 0;
   }
 }
