--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -81,4 +81,13 @@
   .page-header__nav {
     padding-right: 40px;
   }
+
+  .page-header__wrapper {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
+  .page-header__logo-image {
+    padding: 0;
+  }
 }
