--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -1,3 +1,7 @@
+.page-main {
+  background-color: $base;
+}
+
 .page-main__banner {
   position: relative;
   width: 100%;
@@ -103,9 +107,6 @@
 @media (min-width: 1300px) {
   .page-main__banner {
     background: 0;
-    .page {
-      padding: 0;
-    }
   }
 
   .page-main__banner-desktop {
@@ -124,8 +125,9 @@
     margin-right: 760px;
     &--catalog {
       margin-right: 0;
+      margin-left: 40px;
+      padding: 0;
     }
-
   }
 
   .page-main__text {
