--- a/source/sass/blocks/production.scss
+++ b/source/sass/blocks/production.scss
@@ -21,11 +21,6 @@
   padding-bottom: 25px;
   padding-left: 20px;
   padding-right: 20px;
-  p {
-    font-family: arial;
-    font-size: 12px;
-    color: $grey-text;
-  }
 }
 
 .production__order {
@@ -48,17 +43,22 @@
   width: 100%;
   font-family: arial;
   font-size: 12px;
+  line-height: 16px;
   color: $grey-text;
   padding-bottom: 23px;
-}
-
-.production__table {
   td {
     text-align: left;
     &:last-child {
       text-align: right;
     }
   }
+}
+
+.production__more {
+  font-family: arial;
+  font-size: 12px;
+  line-height: 16px;
+  color: $grey-text;
 }
 
 @media (min-width: 768px) {
@@ -81,6 +81,10 @@
     &:last-child {
       background-color: $base;
       border: 1px solid #ededed;
+      margin-bottom: 0;
+    }
+    &:nth-last-child(2) {
+      margin-bottom: 0;
     }
   }
 
@@ -92,16 +96,18 @@
 
   .production__title {
     margin: 0;
-    margin-bottom: 27px;
-    padding-left: 70px;
-    padding-right: 70px;
+    margin-bottom: 17px;
+    padding-left: 50px;
+    padding-right: 50px;
+    font-size: 20px;
+    line-height: 20px;
     text-align: center;
   }
 
   .production__logo {
     position: absolute;
     left: center;
-    top: -200%;
+    top: -100px;
   }
 
   .production__text {
@@ -110,11 +116,36 @@
 
   .production__table {
     width: 100%;
+    font-size: 16px;
+    line-height: 16px;
+    padding-bottom: 33px;
+    td {
+      border-bottom: 1px solid #cdcdcd;
+      padding-bottom: 10px;
+      padding-top: 10px;
+    }
+  }
+
+  .production__more {
+    margin-bottom: 100px;
+    font-size: 16px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
 
 @media (min-width: 1300px) {
   .production__item {
-    width: 25%;
+    width: 245px;
+    margin-right: 40px;
+    margin-left: 40px;
+    &:nth-child(n+5) {
+      margin-bottom: 0;
+      }
+  }
+
+  .production__title {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
