--- a/source/sass/blocks/about-list.scss
+++ b/source/sass/blocks/about-list.scss
@@ -1,3 +1,9 @@
 .about-list {
   @include clearlist;
 }
+
+.about-list__item {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
