--- a/source/sass/blocks/production.scss
+++ b/source/sass/blocks/production.scss
@@ -46,6 +46,7 @@
   line-height: 16px;
   color: $grey-text;
   padding-bottom: 23px;
+  border-spacing: 0;
   td {
     text-align: left;
     &:last-child {
