--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,25 +1,81 @@
 .form {
   background-color: $base;
+  margin-bottom: 34px;
+}
+
+.form__about-cat {
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .form__label {
+  margin-right: 15px;
   text-transform: uppercase;
+  font-size: 16px;
+  line-height: 18px;
   color: $black-form;
 }
 
+.form__contacts {
+  border: 0;
+  margin: 0;
+  padding: 0;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.form__target {
+  @include clearlist;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 29px;
+}
+
+.form__comment {
+  border: 0;
+  margin: 0;
+  padding: 0;
+  padding-left: 20px;
+  padding-right: 20px;
+  label {
+    margin-bottom: 30px;
+  }
+}
+
+.form__textarea {
+  margin-left: 20px;
+  margin-right: 20px;
+  width: 280px;
+}
+
+.form__extra {
+  border: 0;
+  margin: 0;
+  padding: 0;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 .form__input {
+  flex-grow: 1;
+  padding: 12px;
+  margin-bottom: 15px;
   text-transform: uppercase;
   color: $grey-text;
 }
 
-.form fieldset {
-  border: 0;
-  margin: 0;
-  padding: 0;
+.form__title {
+  padding-left: 20px;
+  padding-right: 100px;
+  margin-bottom: 30px;
 }
 
 .form__button {
-  width: 100%;
+  width: 280px;
+  margin-top: 43px;
+  margin-right: 20px;
+  margin-bottom: 23px;
+  margin-left: 20px;
 }
 
 .form__textarea {
@@ -27,7 +83,116 @@
 }
 
 .form__note {
+  display: block;
   font-family: arial;
   font-size: 14px;
+  line-height: 16px;
   color: $grey-text;
+  text-align: center;
+}
+
+@media (min-width: 768px) {
+  .form__title {
+    padding-left: 0;
+  }
+
+  .form__about-cat {
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+
+  .form__target {
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+
+  .form__contacts {
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+
+  .form__comment {
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+
+  .form__textarea {
+    margin: 0;
+  }
+
+  .form__data {
+    padding-left: 0;
+  }
+
+  .form__extra {
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+
+  .form__label {
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .form__input {
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .form__textarea {
+    font-size: 20px;
+    line-height: 30px;
+    width: 631px;
+  }
+
+  .form__wrap {
+    display: flex;
+    align-items: baseline;
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+
+  .form__button {
+    margin-left: 0;
+  }
+}
+
+@media (min-width: 1300px) {
+  .form__cat {
+    display: flex;
+  }
+
+  .form__about-cat {
+    width: 50%;
+    padding-left: 40px;
+    padding-right: 40px;
+    margin-right: 80px;
+  }
+
+  .form__target {
+    width: 50%;
+    padding-top: 36px;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 33px;
+  }
+
+  .form__contacts {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
+  .form__comment {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
+  .form__extra {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
+  .form__textarea {
+    width: 1220px;
+  }
 }
