--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -195,4 +195,15 @@
   .form__textarea {
     width: 1220px;
   }
+
+  .form__wrap {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
+  .form__button {
+    width: 568px;
+    margin-right: 82px;
+    font-size: 20px;
+  }
 }
