--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -12,3 +12,17 @@
     color: $grey-text;
   }
 }
+
+@media (min-width: 768px){
+  .button {
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+
+
+@media (min-width: 1300px){
+  .button {
+    font-size: 20px;
+  }
+}
