--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -85,8 +85,18 @@
 }
 
 @media (min-width: 1300px) {
+  .example {
+    background-color: $grey;
+    margin-top: 217px;
+    padding-top: 0;
+    padding-bottom: 73px;
+
+  }
+
   .example__title {
-    margin-bottom: 66px;
+    position: absolute;
+    top: -127px;
+    left: 40px;
   }
 
   .example__description {
@@ -94,22 +104,30 @@
     padding-bottom: 71px;
     padding-top: 76px;
     padding-right: 805px;
-    background-color: $grey;
   }
 
   .example__indicators {
     flex-direction: column;
     justify-content: start;
-    background-color: $grey;
   }
 
   .example__spending {
     text-align: left;
     flex-direction: row;
+    margin-bottom: 0;
   }
 
   .example__spending-text {
     margin-right: 64px;
-    margin-bottom: 75px;
+    margin-bottom: 0px;
+  }
+
+  .example__cat {
+    position: absolute;
+    top: -172px;
+    right: 124px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
